--- a/arcsi/templates/base.html
+++ b/arcsi/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="arcsipage">
-  <div class="container-fluid">
+  <div class="container">
 
     <header class="siteheader">
       <h1>
