--- a/arcsi/static/generalstyles.css
+++ b/arcsi/static/generalstyles.css
@@ -121,9 +121,10 @@ section p {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     column-gap: 1rem;
+    row-gap: 1rem;
 }
 
-.user-card, .show-card, .episode-card {
+.user-card, .shows-inner, .episode-card {
     padding: 1em;
     border: 1px solid;
     border-radius: 3px;
@@ -161,3 +162,22 @@ section p {
     border-radius: 3px;
     padding: 0.5rem 2rem;
 }
+
+.show-title {
+    background: black;
+    color: white;
+}
+.show-title a {
+    padding: 1rem;
+    display: block;
+    color: white;
+}
+.show-title span {
+    float: right;
+}
+
+.show-title a h4 {
+    margin: 0;
+    display: inline;
+}
+
