--- a/arcsi/templates/archive/list_archive.html
+++ b/arcsi/templates/archive/list_archive.html
@@ -43,28 +43,43 @@
     <div class="shows-list">
     {% for show in shows %}
     <div class="show-card">
-        <p>Show host: {% for user in show.users %} {% if user.name %} {{ user.name }} {% else %} {{ user.email }}
-            {% endif %}{% endfor %}
-        </p>
-        <p>Show active: {{show.active}}</p>
-        <p>Show name: {{show.name}}</p>
-        <p>Show description: {{show.description}}</p>
-        <p>Show language: {{show.language}}</p>
-        <p>Show cover image URL: {{show.cover_image_url}}</p>
-        <p>Show playlist name: {{show.playlist_name}}</p>
-        <p>Show frequency: {{show.frequency}}</p>
-        <p>Show week: {{show.week}}</p>
-        <p>Show day: {{show.day}}</p>
-        <p>Show start: {{show.start}}</p>
-        <p>Show end: {{show.end}}</p>
-        <p>Show archive lahmastore base URL: {{show.archive_lahmastore_base_url}}</p>
-        <p>Show archive mixcloud: {{show.archive_mixcloud}}</p>
-        <p>Show archive mixcloud base URL: {{show.archive_mixcloud_base_url}}</p>
-        <p>Show episodes:<br> {% for item in show["items"] %}--number: {{item.number}} --play_date: {{item.play_date}} --name:
-            {{item.name}} --description: {{item.description}} --archived:
-            {% if item.archived %}archived {% else %}not_archived {% endif %} --permalink: <a
-                href="{{ url_for('router.view_item', id=item.id) }}">{{item.id}}</a><br>{% endfor %}</p>
-        <p>permalink <a href="{{ url_for('router.view_show', id=show.id) }}">{{show.id}}</a></p>
+        <div class="show-title">
+            <a href="{{ url_for('router.view_show', id=show.id) }}">
+                <h4>{{show.name}}</h4>
+                <span>with ID: {{show.id}}</span>
+            </a>        
+        </div>
+        <div class="shows-inner">
+            <p>Show host: {% for user in show.users %} {% if user.name %} {{ user.name }} {% else %} {{ user.email }}
+                {% endif %}{% endfor %}
+            </p>
+            <p>Show active: {{show.active}}</p>
+            <p>Show description: {{show.description}}</p>
+            <p>Show language: {{show.language}}</p>
+            <p>Show cover image: <a href="{{show.cover_image_url}}"></a>Link</p>
+            <p>Show playlist name: {{show.playlist_name}}</p>
+            <p>Show frequency: {{show.frequency}}</p>
+            <p>Show week/day: {{show.week}}/{{show.day}}</p>
+            <p>Show start/end: {{show.start}}/{{show.end}}</p>
+            <p>Show archive lahmastore base URL: {{show.archive_lahmastore_base_url}}</p>
+            <p>Show archive mixcloud: {{show.archive_mixcloud}}</p>
+            <p>Show archive mixcloud base URL: {{show.archive_mixcloud_base_url}}</p>
+            <p><b>Show episodes:</b><br> 
+                <ul>
+                {% for item in show["items"] %}
+                <li>
+                    --number: {{item.number}} <br> 
+                    --name: <a
+                        href="{{ url_for('router.view_item', id=item.id) }}">{{item.name}} with ID: {{item.id}}</a>
+                    <br> 
+                    --play_date: {{item.play_date}} <br> 
+                    --description: {{item.description}} <br> 
+                    --archived: {% if item.archived %}archived {% else %}not_archived {% endif %} 
+                </li>
+                {% endfor %} 
+                </ul>    
+            </p>
+        </div>
     </div>
     {% endfor %}    
     </div>    
