--- a/arcsi/templates/item/edit.html
+++ b/arcsi/templates/item/edit.html
@@ -28,7 +28,7 @@
   <label for="name">Episode name</label>
   <input name="name" id="name" value="{{ item.name }}">
   <label for="description">Episode description</label>
-  <input name="description" id="description" value="{{ item.description }}">
+  <textarea name="description" id="description" value="{{ item.description }}" rows="8"  required></textarea>
   <fieldset>
     <legend>Episode language</legend>
     <label for="music">Music</label>
