--- a/arcsi/templates/show/add.html
+++ b/arcsi/templates/show/add.html
@@ -32,7 +32,7 @@
 
   <div>
     <label for="description">Show description</label>
-    <input name="description" id="description" required>
+    <textarea name="description" id="description" rows="8"  required></textarea>
   </div>
 
   <div>
