--- a/arcsi/templates/item/add.html
+++ b/arcsi/templates/item/add.html
@@ -41,7 +41,7 @@
 
   <div>
     <label for="description">Episode description</label>
-    <input name="description" id="description">
+    <textarea name="description" id="description" rows="8"  required></textarea>
   </div>
 
 <div>
