--- a/arcsi/templates/show/edit.html
+++ b/arcsi/templates/show/edit.html
@@ -32,7 +32,7 @@
 
   <div>
     <label for="description">Show description</label>
-    <input name="description" id="description" value="{{ show.description }}" required>
+    <textarea name="description" id="description" value="{{ show.description }}" rows="8"  required></textarea>
   </div>
 
   <div>
