--- a/arcsi/templates/show/edit.html
+++ b/arcsi/templates/show/edit.html
@@ -30,9 +30,9 @@
     <input name="name" id="name" value="{{ show.name }}" required>
   </div>
 
-  <div>
+  <div class="description">
     <label for="description">Show description</label>
-    <textarea name="description" id="description" value="{{ show.description }}" rows="8"  required></textarea>
+    <textarea name="description" id="description" value="{{ show.description }}" rows="4"  required></textarea>
   </div>
 
   <div>
