--- a/arcsi/templates/base.html
+++ b/arcsi/templates/base.html
@@ -13,8 +13,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 
   <link rel="stylesheet" href="/static/generalstyles.css">
+  <script src="/static/arcsiscripts.js"></script>
   
 </head>
 
