--- a/arcsi/templates/item/add.html
+++ b/arcsi/templates/item/add.html
@@ -39,7 +39,7 @@
     <input name="name" id="name" required>
   </div>
 
-  <div>
+  <div class="description">
     <label for="description">Episode description</label>
     <textarea name="description" id="description" rows="8"  required></textarea>
   </div>
