--- a/arcsi/templates/item/list.html
+++ b/arcsi/templates/item/list.html
@@ -11,7 +11,9 @@
         <p>Episode parent show: {% for show in item["shows"] %} {{ show["name"] }} {% endfor %}</p>
         <p>Episode number: {{item["number"]}}</p>
         <p>Episode name: {{item["name"]}}</p>
-        <p>Episode image URL: {{item["image_url"]}}</p>
+        <p>Episode image URL:
+            <a href='{{item["image_url"]}}'>Link</a>
+        </p>
         <p>Episode description: {{item["description"]}}</p>
         <p>Episode language: {{item.language}}</p>
         <p>Episode play date: {{item["play_date"]}}</p>
