--- a/arcsi/templates/show/add.html
+++ b/arcsi/templates/show/add.html
@@ -30,9 +30,9 @@
     <input name="name" id="name" required>
   </div>
 
-  <div>
+  <div class="description">
     <label for="description">Show description</label>
-    <textarea name="description" id="description" rows="8"  required></textarea>
+    <textarea name="description" id="description" rows="4" required></textarea>
   </div>
 
   <div>
