--- a/arcsi/templates/show/list.html
+++ b/arcsi/templates/show/list.html
@@ -9,27 +9,43 @@
 <div class="shows-list">
     {% for show in shows %}
     <div class="show-card">
-        <p>Show host: {% for user in show.users %} {% if user.name %} {{ user.name }} {% else %} {{ user.email }} {% endif %}
-            {% endfor %}</p>
-        <p>Show active: {{show.active}}</p>
-        <p>Show name: {{show.name}}</p>
-        <p>Show description: {{show.description}}</p>
-        <p>Show language: {{show.language}}</p>
-        <p>Show cover image URL: {{show.cover_image_url}}</p>
-        <p>Show playlist name: {{show.playlist_name}}</p>
-        <p>Show frequency: {{show.frequency}}</p>
-        <p>Show week: {{show.week}}</p>
-        <p>Show day: {{show.day}}</p>
-        <p>Show start: {{show.start}}</p>
-        <p>Show end: {{show.end}}</p>
-        <p>Show archive lahmastore base URL: {{show.archive_lahmastore_base_url}}</p>
-        <p>Show archive mixcloud: {{show.archive_mixcloud}}</p>
-        <p>Show archive mixcloud base URL: {{show.archive_mixcloud_base_url}}</p>
-        <p>Show items:<br> {% for item in show["items"] %}--number: {{item.number}} --play_date: {{item.play_date}} --name:
-            {{item.name}} --description: {{item.description}} --archived:
-            {% if item.archived %}archived {% else %}not_archived {% endif %} --permalink: <a
-                href="{{ url_for('router.view_item', id=item.id) }}">{{item.id}}</a><br>{% endfor %}</p>
-        <p>permalink <a href="{{ url_for('router.view_show', id=show.id) }}">{{show.id}}</a></p>
+        <div class="show-title">
+            <a href="{{ url_for('router.view_show', id=show.id) }}">
+                <h4>{{show.name}}</h4>
+                <span>with ID: {{show.id}}</span>
+            </a>        
+        </div> 
+        <div class="shows-inner">   
+            <h5>Show items: </h5>
+                <ul>
+                    {% for item in show["items"] %}
+                    <li>
+                    <a href="{{ url_for('router.view_item', id=item.id) }}">
+                        {{item.number}}. <strong>{{item.name}}</strong> – {{item.description}} (Play Date: {{item.play_date}} | ID: {{item.id}}{% if item.archived %} archived {% else %} not_archived {% endif %})
+                    </a>                    
+                    </li>
+                    {% endfor %}
+                </ul> 
+            <h5 class="infos-show">Show infos &raquo;</h5>
+            <div class="hidden-infos">
+                <p>Show host: {% for user in show.users %} {% if user.name %} {{ user.name }} {% else %} {{ user.email }} {% endif %}
+                    {% endfor %}</p>
+                <p>Show active: {{show.active}}</p>
+                <p>Show name: {{show.name}}</p>
+                <p>Show description: {{show.description}}</p>
+                <p>Show language: {{show.language}}</p>
+                <p>Show cover image: <a href="{{show.cover_image_url}}">Link</a></p>
+                <p>Show playlist name: {{show.playlist_name}}</p>
+                <p>Show frequency: {{show.frequency}}</p>
+                <p>Show week: {{show.week}}</p>
+                <p>Show day: {{show.day}}</p>
+                <p>Show start: {{show.start}}</p>
+                <p>Show end: {{show.end}}</p>
+                <p>Show archive lahmastore base URL: {{show.archive_lahmastore_base_url}}</p>
+                <p>Show archive mixcloud: {{show.archive_mixcloud}}</p>
+                <p>Show archive mixcloud base URL: {{show.archive_mixcloud_base_url}}</p>
+            </div>
+        </div>
     </div>
     {% endfor %}    
 </div>  
