--- a/arcsi/templates/user/list.html
+++ b/arcsi/templates/user/list.html
@@ -13,7 +13,13 @@
         <p>User active: {{user.active}}</p>
         <p>User butt username: {{user.butt_user}}</p>
         <p>User butt password: {{user.butt_pw}}</p>
-        <p>User hosted shows: {% for show in user.shows %} {{ show.name }} {% endfor %}</p>
+        <p>User hosted shows: 
+            <ul>
+            {% for show in user.shows %} 
+            <li>{{ show.name }}</li> 
+            {% endfor %}
+            </ul>
+        </p>
         {% if current_user.has_role("admin") %}
 
         <h4>ADMIN EYES</h4>
