--- a/arcsi/templates/user/view.html
+++ b/arcsi/templates/user/view.html
@@ -10,7 +10,13 @@
 <p>User active: {{user.active}}</p>
 <p>User butt username: {{user.butt_user}}</p>
 <p>User butt password: {{user.butt_pw}}</p>
-<p>User hosted shows: {% for show in user.shows %} {{ show.name }} {% endfor %}</p>
+<p>User hosted shows: 
+    <ul>
+    {% for show in user.shows %} 
+    <li>{{ show.name }}</li> 
+    {% endfor %}
+    </ul>
+</p>
 <a href="{{ url_for('router.edit_user', id=user['id']) }}">Edit user</a>
 {% if user.has_role("admin") %}
 
