--- a/arcsi/templates/item/edit.html
+++ b/arcsi/templates/item/edit.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 <form action="{{ url_for('arcsi.edit_item', id=item.id) }}" method="post" enctype="multipart/form-data">
+
+<article class="add-infos">
+
+<div> 
   <label for="shows">Episode of show:</label>
   {% if current_user.has_role("admin") %}
   <input type="hidden" name="show_name" id="show_name" value="{{ shows[0].name }}"><select name="shows" id="shows"
@@ -23,33 +27,60 @@
     {% endfor %}
   </select>
   {% endif %}
+</div> 
+
+<div>
   <label for="number">Episode number</label>
-  <input type="number" name="number" id="number" value="{{ item.number }}">
+  <input type="number" name="number" id="number">
+</div>
+
+<div>
   <label for="name">Episode name</label>
-  <input name="name" id="name" value="{{ item.name }}">
-  <div class="description">
-    <label for="description">Episode description</label>
-    <textarea name="description" id="description" value="{{ item.description }}" rows="8"  required></textarea>
-  </div>
-  <fieldset>
-    <legend>Episode language</legend>
-    <label for="music">Music</label>
-    <input type="radio" name="language" id="music" value="music">
-    <label for="hu_hu">Magyar</label>
-    <input type="radio" name="language" id="hu_hu" value="hu_hu" checked>
-    <label for="en_uk">English</label>
-    <input type="radio" name="language" id="en_uk" value="en_uk">
-  </fieldset>
+  <input name="name" id="name" required>
+</div>
+
+<div class="description">
+  <label for="description">Episode description</label>
+  <textarea name="description" id="description" rows="8"  required></textarea>
+</div>
+
+<div>
+  <label for="language">Episode language</label>
+  <select name="language" id="language">
+    <option id="music" value="music">Music</option>
+    <option id="hu_hu" value="hu_hu" selected>Magyar</option>
+    <option id="en_uk" value="en_uk">English</option>
+  </select>
+</div>
+
+<div>
   <label for="play_date">Play date</label>
-  <input type="date" name="play_date" id="play_date" value="{{ item.play_date }}">
+  <input type="date" name="play_date" id="play_date" required>
+</div>
+
+<div>
   <label for="play_file">Play file</label>
-  <input type="file" name="play_file" id="play_file" value="{{ item.play_file_name }}">
+  <input type="file" name="play_file" id="play_file">
+</div>
+
+<div>
   <label for="image_file">Episode cover image</label>
-  <input type="file" name="image_file" id="image_file" value="{{ item.image_url }}">
+  <input type="file" name="image_file" id="image_file">
+</div>
+
+<div>
   <label for="live">Live</label>
-  <input type="hidden" name="live" id="live" {% if item.live %} value="1" {% else %} value="0" {% endif %}><input
-    type="checkbox" onclick="this.previousElementSibling.value=this.checked?1:0" {% if item.live %} checked {% endif %}>
+  <input type="hidden" name="live" id="live" value="0"><input type="checkbox"
+    onclick="this.previousElementSibling.value=this.checked?1:0">
+  <label for="broadcast">Broadcast</label>
+  <input type="hidden" id="broadcast" name="broadcast" value="0"><input type="checkbox"
+    onclick="this.previousElementSibling.value=this.checked?1:0">
+</div>
+
+
   <p>TODO THIS DIFFERENTLY ON EDIT</p>
+
+<div> 
   <label for="broadcast">Broadcast</label>
   <input type="hidden" id="broadcast" name="broadcast" {% if item.broadcast %} value="1" {% else %} value="0"
     {% endif %}><input type="checkbox" onclick="this.previousElementSibling.value=this.checked?1:0"
@@ -62,8 +93,15 @@
   <input type="hidden" name="archive_mixcloud" id="archive_mixcloud" {% if item.archive_mixcloud %} value="1" {% else %}
     value="0" {% endif %}><input type="checkbox" onclick="this.previousElementSibling.value=this.checked?1:0"
     {% if item.archive_mixcloud %} checked {% endif %}>
+  </div> 
   <!-- TODO updated_at ? uploader means anything here? -->
+
   <input type="hidden" name="uploader" id="uploader" value="{{ current_user.email }}">
-  <input type="submit" value="Update">
+
+ <div>
+    <input type="submit" value="Update">
+ </div> 
+
+</article>  
 </form>
 {% endblock %}
